--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@ body {
 }
 
     /* Navbar */
+    nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.95);
+  backdrop-filter: blur(8px);
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+}
+
+/* Add top padding to header/first section equal to navbar height */
+header, section:first-of-type {
+  padding-top: 70px; /* Adjust this value to your navbar height */
+}
     nav ul {
   display: flex;
   list-style: none;
@@ -516,4 +533,3 @@ nav ul li {
   </script>
 </body>
 </html>
-
