--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ nav ul li {
   <!-- Hero -->
 
   <header>
-    <img src="ganesh.jfif" alt="Ganesh">
+    <img src="IMG_3932.jpge" alt="Ganesh">
     <h1 data-en="Welcome to Our Ganesh Committee" data-kn="ನಮ್ಮ ಗಣೇಶ ಸಮಿತಿಗೆ ಸ್ವಾಗತ">Welcome to Our Ganesh Committee</h1>
   </header>
 
@@ -577,3 +577,4 @@ setInterval(create3DFlower, 900);
   </script>
 </body>
 </html>
+
